Closed
Bug 646972
Opened 14 years ago
Closed 14 years ago
An interval started in a background tab ends up clamped to the 1Hz clamp forever
Categories
(Core :: DOM: Core & HTML, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla5
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
()
Details
Attachments
(1 file)
Steps to reproduce:
1) Make sure you have new tabs set to open in background.
2) Open the context menu for the "URL" field link on this bug.
3) Select "open in new tab"
4) Wait 10 seconds.
5) Switch to the new tab.
Expected results: 10 or so numbers around 1000 followed by a whole slew of numbers around 4.
Actual results: all the numbers are about 1000; there is no slew.
The problem is that we clamp the timer before storing mInterval in nsTimeout. Patch coming up to fix that. Note that we clam _again_ when using mInterval to reset the timer, so this is exactly what we want: the clamp is only applied when actually setting timers.
![]() |
Assignee | |
Comment 1•14 years ago
|
||
Attachment #523414 -
Flags: review?(jst)
![]() |
Assignee | |
Updated•14 years ago
|
Priority: -- → P1
Whiteboard: [need review]
Updated•14 years ago
|
Attachment #523414 -
Flags: review?(jst) → review+
Updated•14 years ago
|
OS: Mac OS X → Windows 7
![]() |
Assignee | |
Updated•14 years ago
|
Whiteboard: [need review] → [need landing]
![]() |
Assignee | |
Comment 2•14 years ago
|
||
Flags: in-testsuite?
Whiteboard: [need landing] → fixed-in-cedar
Comment 3•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-cedar
Target Milestone: --- → mozilla2.2
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•