Bug 646972.  Clamp the timeout interval after storing mInterval on the nsTimeout, so interval timers will correctly speed up when a tab goes from background to foreground.  r=jst